# akasa-game-rs

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile.caddy  docker-compose.prod.yml  docker-compose.yml  fate_weaver_context.json  fate_weaver_context.md  protagonist_context.json  protagonist_context.md  upper_narrator_context.json  upper_narrator_context.md
server/: Cargo.toml  Dockerfile
server/db-data/: archive.sqlite3
server/src/: analytics.rs  database.rs  email.rs  error.rs  main.rs  session_archive.rs  session_history.rs  state.rs
server/src/api/: dto.rs  handlers.rs  mod.rs
server/src/db/: mod.rs
server/src/session_archive/: codec.rs  entity_contexts.rs  mod.rs  rounds.rs  schema.rs  sessions.rs  snapshot.rs  story_edges.rs  story_path.rs  storyline.rs  tests.rs
server/src/state/: tests.rs
story-engine/: Cargo.toml
story-engine/src/: archive.rs  debug.rs  engine.rs  lib.rs  main.rs  profile.rs  runtime.rs  schedule.rs  turn_messages.rs  utils.rs
story-engine/src/components/: agent.rs  flow.rs  mod.rs  outcome.rs  session.rs  session_event_sink.rs  turn_flow.rs  world_snapshot.rs
story-engine/src/engine/: mod.rs  runtime.rs  schedule.rs  session.rs  turn_messages.rs
story-engine/src/prompts/: character_prompt.rs  fate_weaver_prompt.rs  mod.rs  protagonist_prompt.rs  upper_narrator_prompt.rs  world_prompt.rs
story-engine/src/resources/: agent_task.rs  export.rs  history.rs  mod.rs  player_input.rs  protagonist_action.rs  session_registry.rs  turn_state.rs  world_snapshot.rs
story-engine/src/systems/: context_export_sys.rs  (+3 more)
(+128 files in other folders)
