[workspace]
members = ["server", "story-engine"]
resolver = "3"

[workspace.dependencies]
agent = { package = "alaya-agent", path = "../alaya-agent-rs" }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
